# Shape-of-Addition

./: .gitignore  LICENSE  README.md  analyze_carry_similarity.py  analyze_mera_results.py  baseline.py  baseline_mind.py  classifier.py  debug.py  dualstream_probe.py  error_decomposition.py  experiment.py  force_probe.py  generate.py  generate_mera.py  incarry_probe.py  linear_probe.py  mera.py  mera_task.py  mlp_probe.py  model_utils.py  num2len5-10000.pkl  num3len3-10000.pkl  num4len10-20000.pkl  plot_auc.py  plot_error_decomposition_umap.py  probe_data.py  probe_utils.py  pyproject.toml  requirements.txt  verify.py  verify_norm.py
data/: num2len10-10000.pkl  num3len10-10000.pkl  num3len10-100000.pkl  num3len12-100000.pkl  num4len2-10000.pkl
figures/: cluster_center_distance.py  error_decomposition_umap.py  vertical_flow_pca.py  vertical_flow_umap.py
src/: __init__.py  dualstream.py  error_decomposition.py  experiment.py  generation.py  incarry_probe.py  linear_probe.py  mlp_probe.py  models.py
src/plotting/: cluster_center_distance.py  error_decomposition_plots.py  interactive_html.py  pca_plots.py  umap_plots.py
src/utils/: __init__.py  cli.py  flow_utils.py  metrics.py  model_utils.py  probe_data.py  probe_utils.py  quanta_loader.py  verify.py
