[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vertical-flow"
version = "0.1.0"
description = "Reproduction code for Vertical Flow arithmetic probing experiments."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
